# Simple-Web-Crawler

./: .gitignore  __init__.py  logger.py  pyproject.toml  readme.md  setup.py
crawler/: __init__.py  abstract.py  simple_async_crawler.py  simple_sync_crawler.py
models/: __init__.py  crawler_config.py
storage/: __init__.py  base.py  disk_storage.py  in_memory_storage.py
test/: simple_async_crawler.py  simple_sync_crawler.py
webcrawler/: __init__.py  utils.py
webcrawler/crawler/: __init__.py  abstract.py  robot_parser.py  simple_async_crawler.py  simple_sync_crawler.py
webcrawler/models/: __init__.py  crawler_config.py  page_content.py
webcrawler/storage/: __init__.py  base.py  disk_storage.py  in_memory_storage.py
