[tool.poetry]
name = "webcrawler"
version = "0.1.0"
description = "a simple web crawler"
authors = ["Raj <rs457036@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
httpx = "^0.25.0"
markdownify = "^0.11.6"
pydantic = "^2.3.0"
urllib3 = "^2.0.4"
coloredlogs = "^15.0.1"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
